--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,5 @@
 ---
+version: 2
 # project_name: retry
 # before:
   # hooks:
@@ -17,24 +18,17 @@ builds:
       - windows
     goarch:
       - amd64
-      - arm
       - arm64
-    goarm:
-      - "6"
-      - "7"
     dir: cmd/
     id: retry
     binary: retry
 
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    format: binary
+    formats: ["binary"]
 
 checksum:
   name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ .Tag }}"
-
 
 dockers:
   # https://goreleaser.com/customization/docker/
@@ -42,8 +36,8 @@ dockers:
     goos: linux
     goarch: amd64
     image_templates:
-      - "sgaunet/{{ .ProjectName }}:{{ .Version }}-amd64"
-      - "sgaunet/{{ .ProjectName }}:latest-amd64"
+      - "ghcr.io/sgaunet/{{ .ProjectName }}:{{ .Version }}-amd64"
+      - "ghcr.io/sgaunet/{{ .ProjectName }}:latest-amd64"
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--label=org.opencontainers.image.created={{.Date}}"
@@ -58,8 +52,8 @@ dockers:
     goos: linux
     goarch: arm64
     image_templates:
-      - "sgaunet/{{ .ProjectName }}:{{ .Version }}-arm64v8"
-      - "sgaunet/{{ .ProjectName }}:latest-arm64v8"
+      - "ghcr.io/sgaunet/{{ .ProjectName }}:{{ .Version }}-arm64v8"
+      - "ghcr.io/sgaunet/{{ .ProjectName }}:latest-arm64v8"
     build_flag_templates:
       - "--platform=linux/arm64/v8"
       - "--label=org.opencontainers.image.created={{.Date}}"
@@ -70,54 +64,16 @@ dockers:
     # - src
     # - resources
 
-  - use: buildx
-    goos: linux
-    goarch: arm
-    goarm: 6
-    image_templates:
-      - "sgaunet/{{ .ProjectName }}:{{ .Version }}-armv6"
-      - "sgaunet/{{ .ProjectName }}:latest-armv6"
-    build_flag_templates:
-      - "--platform=linux/arm/v6"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-    # extra_files:
-    # - src
-    # - resources
-
-  - use: buildx
-    goos: linux
-    goarch: arm
-    goarm: 7
-    image_templates:
-      - "sgaunet/{{ .ProjectName }}:{{ .Version }}-armv7"
-      - "sgaunet/{{ .ProjectName }}:latest-armv7"
-    build_flag_templates:
-      - "--platform=linux/arm/v7"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-    # extra_files:
-    # - src
-    # - resources
-
 docker_manifests:
   # https://goreleaser.com/customization/docker_manifest/
-  - name_template: sgaunet/{{ .ProjectName }}:{{ .Version }}
+  - name_template: ghcr.io/sgaunet/{{ .ProjectName }}:{{ .Version }}
     image_templates:
-      - sgaunet/{{ .ProjectName }}:{{ .Version }}-amd64
-      - sgaunet/{{ .ProjectName }}:{{ .Version }}-arm64v8
-      - sgaunet/{{ .ProjectName }}:{{ .Version }}-armv6
-      - sgaunet/{{ .ProjectName }}:{{ .Version }}-armv7
-  - name_template: sgaunet/{{ .ProjectName }}:latest
+      - ghcr.io/sgaunet/{{ .ProjectName }}:{{ .Version }}-amd64
+      - ghcr.io/sgaunet/{{ .ProjectName }}:{{ .Version }}-arm64v8
+  - name_template: ghcr.io/sgaunet/{{ .ProjectName }}:latest
     image_templates:
-      - sgaunet/{{ .ProjectName }}:latest-amd64
-      - sgaunet/{{ .ProjectName }}:latest-arm64v8
-      - sgaunet/{{ .ProjectName }}:latest-armv6
-      - sgaunet/{{ .ProjectName }}:latest-armv7
+      - ghcr.io/sgaunet/{{ .ProjectName }}:latest-amd64
+      - ghcr.io/sgaunet/{{ .ProjectName }}:latest-arm64v8
 
 
 changelog:
