--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -46,4 +46,4 @@ tasks:
   release:
     desc: "Create release"
     cmds:
-      - GITLAB_TOKEN="" goreleaser --clean  --skip validate
+      - GITLAB_TOKEN="" goreleaser --clean
