feat: implement exponential backoff strategy and enhance CLI options

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
           "mode": "auto",
           "program": "cmd/",
           "env": {},
-          "args": [ "-c" ,"ls -l /sdf" ]
+          "args": [ "ls -l /sdf" ]
       },
   ]
 }
