--- a/tests/testsuite.yml
+++ b/tests/testsuite.yml
@@ -1108,3 +1108,126 @@ testcases:
     - result.systemout ShouldContainSubstring "attempt"
     - result.systemout ShouldContainSubstring "success"
 
+# =============================================================================
+# SUCCESS/FAILURE CONDITIONS TESTS (Issue #22)
+# =============================================================================
+
+- name: test-retry-on-exit-codes
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --retry-on-exit "1,2" --max-tries 3 "sh -c 'exit 3'"
+    assertions:
+    - result.code ShouldEqual 1
+    - result.systemout ShouldContainSubstring "[1/3] Attempting command"
+    - result.systemout ShouldNotContainSubstring "[2/3]"
+    - result.systemerr ShouldContainSubstring "retry failed"
+
+- name: test-retry-on-specific-exit-code-success
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      rm -f /tmp/retry_exit_test
+      go run ../cmd --retry-on-exit "1" --max-tries 3 "sh -c 'if [ ! -f /tmp/retry_exit_test ]; then touch /tmp/retry_exit_test; exit 1; else rm -f /tmp/retry_exit_test; exit 0; fi'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "[1/3] Attempting command"
+    - result.systemout ShouldContainSubstring "[2/3] Retrying"
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-success-on-exit-codes
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --success-on-exit "0,2" --max-tries 1 "sh -c 'exit 2'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-retry-if-contains
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      rm -f /tmp/retry_contains_test
+      go run ../cmd --retry-if-contains "temporary" --max-tries 3 "sh -c 'if [ ! -f /tmp/retry_contains_test ]; then touch /tmp/retry_contains_test; echo temporary error; exit 1; else rm -f /tmp/retry_contains_test; echo success; fi'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "temporary error"
+    - result.systemout ShouldContainSubstring "[2/3] Retrying"
+    - result.systemout ShouldContainSubstring "success"
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-success-contains
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --success-contains "OK" --max-tries 1 "sh -c 'echo Status: OK; exit 1'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "Status"
+    - result.systemout ShouldContainSubstring "OK"
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-fail-if-contains
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --fail-if-contains "fatal" --max-tries 5 "sh -c 'echo fatal error; exit 1'"
+    assertions:
+    - result.code ShouldEqual 1
+    - result.systemout ShouldContainSubstring "fatal error"
+    - result.systemout ShouldContainSubstring "[1/5] Attempting command"
+    - result.systemout ShouldNotContainSubstring "[2/5]"
+
+- name: test-success-regex
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --success-regex "HTTP/[0-9]\\.[0-9] 2[0-9][0-9]" --max-tries 1 "sh -c 'echo HTTP/1.1 200 OK; exit 1'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "HTTP/1.1 200 OK"
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-retry-regex
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      rm -f /tmp/retry_regex_test
+      go run ../cmd --retry-regex "error [0-9]+" --max-tries 3 "sh -c 'if [ ! -f /tmp/retry_regex_test ]; then touch /tmp/retry_regex_test; echo error 500; exit 1; else rm -f /tmp/retry_regex_test; echo success; fi'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "error 500"
+    - result.systemout ShouldContainSubstring "[2/3] Retrying"
+    - result.systemout ShouldContainSubstring "success"
+
+- name: test-combined-conditions
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --success-on-exit "0,10" --success-contains "DONE" --max-tries 1 "sh -c 'echo DONE; exit 10'"
+    assertions:
+    - result.code ShouldEqual 0
+    - result.systemout ShouldContainSubstring "DONE"
+    - result.systemout ShouldContainSubstring "✓ Success"
+
+- name: test-invalid-regex
+  steps:
+  - type: exec
+    script: |
+      cd {{.venom.testsuite.workdir}}
+      go run ../cmd --success-regex "[invalid regex" --max-tries 1 "echo test"
+    assertions:
+    - result.code ShouldEqual 1
+    - result.systemerr ShouldContainSubstring "invalid regex pattern"
+
+
